tests/parse_print/autogen/442~final/stderr.expected
Error:
    tests/parse_print/autogen/442~final/spec.essence:5:23:
  |
5 |     together({false}, partition({false}) - (partition() : `partition from bool`))
  |                       ^^^^^^^^^^^^^^^^^^
Type error:
	Expected: "Number / set/ mset / relation / function"
	Got: partition from bool

tests/parse_print/autogen/442~final/spec.essence:5:44:
  |
5 |     together({false}, partition({false}) - (partition() : `partition from bool`))
  |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected: "Number / set/ mset / relation / function"
	Got: partition from bool
